--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "clsx": "^1.1.0",
+    "isomorphic-fetch": "^2.2.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.1",
+    "redux": "^4.0.5",
     "typeface-roboto": "0.0.75"
   },
   "scripts": {
