--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "classnames": "^2.2.6",
     "clsx": "^1.1.0",
     "isomorphic-fetch": "^2.2.1",
+    "moment": "^2.24.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
