--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
+    "socket.io-client": "^2.3.0",
     "typeface-roboto": "0.0.75"
   },
   "scripts": {
